<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Placeholder Content -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dev_options_button_warning"
        android:textColor="@color/white"
        android:gravity="center"
        android:padding="16dp" />

    <!-- Reset Settings Button -->
    <Button
        android:id="@+id/btn_reset_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_settings"
        android:backgroundTint="@color/material_dynamic_neutral40"
        android:textColor="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="start" />

    <!-- Shutdown App Button -->
    <Button
        android:id="@+id/btn_shutdown_app"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/shutdown_app"
        android:backgroundTint="@color/material_dynamic_neutral40"
        android:textColor="@color/white"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="start" />
</LinearLayout>
